# korean-voice-acting-engine

./: .gitignore  LICENSE  README.ko.md  README.md  pyproject.toml
configs/: voice_presets.example.json
data/: hard_korean_sentences.example.jsonl  pronunciation_dict.example.json  public_voice_catalog.json  sample_input.txt
docs/: CAPABILITY_ROUTING.ko.md  CAPABILITY_ROUTING.md  CHARACTER_REVIEW_ENGINE.ko.md  CHARACTER_REVIEW_ENGINE.md  CODEX_TRAINING_WORKFLOW.ko.md  CODEX_TRAINING_WORKFLOW.md  CREATOR_SOUND_DESIGN_ENGINE.ko.md  CREATOR_SOUND_DESIGN_ENGINE.md  DATASET_LICENSE_MATRIX.md  DATASET_PREP_WORKFLOW.ko.md  DATASET_PREP_WORKFLOW.md  DEVELOPMENT_IMPLEMENTATION_SPEC.md  DEVELOPMENT_ROADMAP.ko.md  DEVELOPMENT_ROADMAP.md  EXTERNAL_REVIEW_QUARK_NARRATOR_OPEN_GENERATIVE.ko.md  EXTERNAL_REVIEW_QUARK_NARRATOR_OPEN_GENERATIVE.md  EXTERNAL_REVIEW_TTS_BACKENDS.ko.md  EXTERNAL_REVIEW_TTS_BACKENDS.md  EXTERNAL_REVIEW_VOICE_PRO_NEMOTRON.ko.md  EXTERNAL_REVIEW_VOICE_PRO_NEMOTRON.md  FAMILY_VOICE_TRAINING.md  KOREAN_VOICE_POLISH_ENGINE.ko.md  KOREAN_VOICE_POLISH_ENGINE.md  KVAE_CONVERT_ENGINE.ko.md  KVAE_CONVERT_ENGINE.md  KVAE_RENDER_ENGINE.md  KVAE_REVIEW_ENGINE.ko.md  KVAE_REVIEW_ENGINE.md  KVA_NATIVE_TRAINING.md  PRODUCT_EXCELLENCE_PLAN.ko.md  PRODUCT_EXCELLENCE_PLAN.md  PRO_VOICE_BENCHMARK_IMPLEMENTATION.ko.md  PRO_VOICE_BENCHMARK_IMPLEMENTATION.md  PRO_VOICE_BENCHMARK_PLAN.ko.md  PRO_VOICE_BENCHMARK_PLAN.md  PUBLIC_VOICE_CATALOG.ko.md  PUBLIC_VOICE_CATALOG.md  RECORDING_SEGMENTATION.ko.md  RECORDING_SEGMENTATION.md  RELEASE_QUALITY_GATES.ko.md  (+8 more)
tests/: test_acting_planner.py  test_audio_features.py  test_audio_review.py  test_benchmarks.py  test_bioacoustic_dinosaur.py  test_capability_router.py  test_character_review.py  test_dataset_workflows.py  test_date_time_reader.py  test_diagnostics.py  (+25 more)
(+54 files in other folders)
