[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kva-engine"
version = "0.2.0"
description = "Korean-first voice acting TTS engine toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "22B Labs" }
]
keywords = ["korean", "tts", "voice-acting", "text-normalization", "speech"]
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/sinmb79/korean-voice-acting-engine"
Repository = "https://github.com/sinmb79/korean-voice-acting-engine"
Issues = "https://github.com/sinmb79/korean-voice-acting-engine/issues"

[project.scripts]
kva = "kva_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"kva_engine.resources" = ["*.json"]
